--- a/data/styles.css
+++ b/data/styles.css
@@ -5,7 +5,7 @@ body {
 
 .container {
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: auto;
     padding: 25px;
     border: 2px solid #000000;
     border-radius: 10px;
@@ -17,19 +17,19 @@ h1 {
 }
 
 .temperature {
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .moisture {
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .presence {
-    font-size: 40px;
+    font-size: 35px;
 }
 
 .symbol {
-    font-size: 80px;
+    font-size: 100px;
 }
 
 *,
@@ -152,5 +152,65 @@ body {
 }
 
 .waterButton:not(:disabled):active {
+  transform: translateY(.125rem);
+}
+
+.alarmButton {
+  background: #fff;
+  backface-visibility: hidden;
+  border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
+  box-sizing: border-box;
+  color: #212121;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Circular,Helvetica,sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: .875rem 1.125rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.alarmButton:not(:disabled):hover {
+  transform: scale(1.05);
+}
+
+.alarmButton:not(:disabled):hover:active {
+  transform: scale(1.05) translateY(.125rem);
+}
+
+.alarmButton:focus {
+  outline: 0 solid transparent;
+}
+
+.alarmButton:focus:before {
+  content: "";
+  left: calc(-1*.375rem);
+  pointer-events: none;
+  position: absolute;
+  top: calc(-1*.375rem);
+  transition: border-radius;
+  user-select: none;
+}
+
+.alarmButton:focus:not(:focus-visible) {
+  outline: 0 solid transparent;
+}
+
+.alarmButton:focus:not(:focus-visible):before {
+  border-width: 0;
+}
+
+.alarmButton:not(:disabled):active {
   transform: translateY(.125rem);
 }
